About me update

--- a/views/app.pug
+++ b/views/app.pug
@@ -244,7 +244,7 @@ html(lang="en")
     main.main.transition-in-view(data-container tabindex="-1")
       if !debug
         block hero
-        section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
+        section.style-justify(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
           block content
       else
         section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
