--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -7,8 +7,8 @@ block hero
     content: "Crafting the extraordinary is my passion, and my inspiration.",
     image: {
       class: "effect-parallax hero-img",
-      src: "cloudinary/grand-canyon",
-      alt: "An image looking up from inside the Grand Canyon from Unsplash by @sammiamigo."
+      src: "cloudinary/suspension-bridge",
+      alt: "An image of a close up photo of a suspension bridge. By @osmanrana on unsplash."
     }
   })
 
