--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -13,12 +13,12 @@ block pageInfo
 block hero
   //- Banner layer
   +banner({
-    title: "My projects — A showcase of wonders.",
+    title: "My porfolio of projects.",
     content: "A potfolio of projects I have completed, and even some that are still on-going.",
     image: {
       class: "effect-parallax hero-img",
-      src: "cloudinary/cloud-illustration",
-      alt: "An image of large clouds in a blue sky by Gong TY @deathclutch108 on Unsplash"
+      src: "cloudinary/brown-book-on-table",
+      alt: "An image of a book on a L-shape ruler beside a pen that is on a brown wooden table. By @ugmonk on unsplash."
     }
   })
 
@@ -31,7 +31,6 @@ block content
     +layout({
       class: "layout-shorten layout-contain"
     })
-      +head("A porfolio of projects.")
       +main({
         class: "layout-padding-vert-small layout-clearfix"
       })
