--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -75,7 +75,8 @@
         }
 
         &-overlay {
-            transition: background-color #{$transitionDuration} ease, border-color .25s ease;
+            transition: background-color #{$transitionDuration} ease,
+                border-color 0.25s ease;
             background-color: darken(#252072, 20%);
             // @include applyTheme(background, "dark");
             position: absolute;
@@ -95,13 +96,13 @@
 
     &-shadow,
     %shadow {
-        box-shadow: 0 0px 35px 5px change-color($dark, $alpha: 0.53);// rgba(0, 0, 40, 0.23);
+        box-shadow: 0 0px 35px 5px change-color($dark, $alpha: 0.53); // rgba(0, 0, 40, 0.23);
 
         &--1 {
             // box-shadow: 0 5px 14px 6px rgba(0,0,0,.23);
             // box-shadow: 0 5px 14px 6px rgba(19, 19, 19, 0.23);
             // box-shadow: 0 2px 10px 2px rgba(33, 33, 33, 0.22);
-            box-shadow: 0 0 10px 2px rgba(33, 33, 33, .12);
+            box-shadow: 0 0 10px 2px rgba(33, 33, 33, 0.12);
             // border: 1px solid change-color($white, $alpha: 0.7);
             // border-color: var(--tertiary, white);
             // border: 2px solid var(--dark);
@@ -236,11 +237,27 @@
         }
     }
 
+    .wall-e .img-contain {
+        transform: translateY(-20px);
+        object-fit: fill;
+        height: 100%;
+        width: 100%;
+    }
+
     &-joseph-img {
         position: relative;
         max-width: 300px;
         height: 300px;
         width: 300px;
+
+        & figure {
+            transition: filter ease 0.5s;
+            filter: grayscale(0);
+        }
+
+        &:hover figure {
+            filter: grayscale(1);
+        }
 
         .layer-image-overlay {
             background-color: transparent !important;
@@ -264,11 +281,14 @@
         transition: background-color #{$transitionDuration} ease;
         @include applyTheme(background-color, "secondary-light");
 
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             @include applyTheme(background-color, "secondary");
         }
 
-        &, &:hover, &:focus {
+        &,
+        &:hover,
+        &:focus {
             color: $black;
         }
     }
@@ -280,16 +300,18 @@
     }
 
     &-border {
-        $borderStyles: ("solid": solid,
-                "dotted": dotted,
-                "dashed": dashed,
-                "double": double,
-                "groove": groove,
-                "ridge": ridge,
-                "inset": inset,
-                "outset": outset,
-                "hidden": hidden,
-                "none": none);
+        $borderStyles: (
+            "solid": solid,
+            "dotted": dotted,
+            "dashed": dashed,
+            "double": double,
+            "groove": groove,
+            "ridge": ridge,
+            "inset": inset,
+            "outset": outset,
+            "hidden": hidden,
+            "none": none,
+        );
         border: 1px solid $mid;
 
         @for $sz from 1 through 10 {
@@ -381,7 +403,7 @@
     }
 
     &-action-center {
-        transition: opacity .4s ease-in-out;
+        transition: opacity 0.4s ease-in-out;
         pointer-events: auto;
         font-size: 24px;
         position: fixed;
