--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -25,7 +25,7 @@ block content
         +head
           h1.style-font-30--device-phone.style-primary-dark.style-bold.style-uppercase Say Hello — Lets talk
         +main({
-          class: "layout-padding-vert-small layout-clearfix style-justify"
+          class: "layout-padding-vert-small layout-clearfix"
         })
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
           +p("ey, I am ")
