--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -12,7 +12,7 @@ mixin navbar(value = {})
   - let { name } = value;
   - let _class = value.class;
 
-  - let tabs = ["about-me", "my-projects", "contact-me"];
+  - let tabs = ["about", "contact"]; // "projects", 
   - let focusIndex = tabs.indexOf(name.toLowerCase());
 
   header.header
