--- a/views/pages/404.pug
+++ b/views/pages/404.pug
@@ -11,7 +11,7 @@ block pageInfo
     };
 
 block preload
-  link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
+  //- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 
 block content
   //- Intro layer
