--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -28,16 +28,16 @@ block content
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
           +p("ne of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... As a child I was curious, and my parents let my curiousity bloom. In high school I discovered a passion for engineering specifically the engineering of robots (which I later found out to be <strong>Mechatronics</strong>). <br> <br> I am Tenacious & Astute I aim to create only the best, I stop at nothing till the image I have in my mind has been captured in the project. I make sure that in all acts I commit too, I am ready to follow through even if the going gets difficult. I make sure to think things through thoroughly so as to avoid inefficienies. The definition of Astute by the Oxford dictionary is, ​very clever and quick at seeing what to do in a particular situation, especially how to get an advantage. I believe I enbody these traits when working on projects and I would love the oppertunity to show you. <br> <br> I created my portfolio site as a place to display some of the projects I have worked on, and as an easy source to access my resume. For more information")
           +link({
-            href: "/about-me",
+            href: "/about",
             class: "layout-margin-vert-dull layout-margin-left-mini",
             content: "learn more about me."
           })
 
 
   //- Static Banner layer
-  +layer({
-    class: "layer-color-primary"
-  })
+  //- +layer({
+  //-   class: "layer-color-primary"
+  //- })
     +layout({
       class: "layout-contain-large layout"
     })
@@ -48,7 +48,7 @@ block content
           span.style-color-tertiary-dark .
 
   //- Breakthrough layer
-  +layer
+  //- +layer
     +layout({
       class: "layout-contain-large layout-padding-vert-large layout-padding-horz-large--device-gt-tablet layout-padding-horz-default--device-lt-tablet"
     })
@@ -115,66 +115,67 @@ block content
     +layout({
       class: "layout-contain-large"
     })
-        +main({
-            class: "layout-shorten-vert"
+      div.layer-center-line
+      +main({
+          class: "layout-shorten-vert"
+      })
+        //- 1st Row
+        +row({
+          class: "layout-margin-dull"
         })
-          //- 1st Row
-          +row({
-            class: "layout-margin-dull"
+          //- Empty alignment Column
+          +column({
+            class: "layout-col-3 layout-block"
           })
-            //- Empty alignment Column
-            +column({
-              class: "layout-col-3 layout-block"
-            })
 
-            //- 1st Column
-            +column({
-              class: "layout-col-9 layout-padding-small"
-            })
-              +link({
-                href: "/projects/google-designs",
-                class: "layout-block"
-              }, true)(title="The link to the Google Design project page.")
-                +tile({
-                  title: "Google Design",
-                  class: "layer-box layer-surface layout-block layer-tile-outline",
-                  image: {
-                    class: "effect-parallax",
-                    src: "cloudinary/engineer-piping",
-                    alt: "An image of large pipes for a Power Plant from Unsplash.",
-                  }
-                })
-
-          //- 2nd Row
-          +row({
-            class: "layout-margin-dull"
+          //- 1st Column
+          +column({
+            class: "layout-col-9 layout-padding-small"
           })
-            //- 1st Column
-            +column({
-              class: "layout-col-9 layout-padding-small layout-padding-vert-large"
-            })
-              +link({
-                href: "/projects/nasa",
-                class: "layout-block"
-              }, true)(title="The link to the Nasa project page.")
-                +tile({
-                  title: "Nasa",
-                  class: "layer-box layer-surface layout-block layer-tile-outline",
-                  image: {
-                    class: "effect-parallax",
-                    src: "cloudinary/aerial-photo-of-brown-mountains",
-                    alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
-                  }
-                })
-
-            //- Empty alignment Column
-            +column({
-              class: "layout-col-3"
-            })
-
-          div.layout-block.style-center
             +link({
-              href: "/my-projects",
-              class: "style-font-weight-bold style-font-30 style-font-title layout-padding layout-padding-horz-large layout-margin-top-larger",
-              content: "More..."
-            })
+              href: "/projects/google-designs",
+              class: "layout-block"
+            }, true)(title="The link to the Google Design project page.")
+              +tile({
+                title: "Google Design",
+                class: "layer-box layer-surface layout-block layer-tile-outline",
+                image: {
+                  class: "effect-parallax",
+                  src: "cloudinary/engineer-piping",
+                  alt: "An image of large pipes for a Power Plant from Unsplash.",
+                }
+              })
+
+        //- 2nd Row
+        +row({
+          class: "layout-margin-dull"
+        })
+          //- 1st Column
+          +column({
+            class: "layout-col-9 layout-padding-small layout-padding-vert-large"
+          })
+            +link({
+              href: "/projects/nasa",
+              class: "layout-block"
+            }, true)(title="The link to the Nasa project page.")
+              +tile({
+                title: "Nasa",
+                class: "layer-box layer-surface layout-block layer-tile-outline",
+                image: {
+                  class: "effect-parallax",
+                  src: "cloudinary/aerial-photo-of-brown-mountains",
+                  alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
+                }
+              })
+
+          //- Empty alignment Column
+          +column({
+            class: "layout-col-3"
+          })
+
+        div.layout-block.style-center
+          +link({
+            href: "/projects",
+            class: "style-font-weight-bold style-font-30 style-font-title layout-padding layout-padding-horz-large layout-margin-top-larger",
+            content: "More..."
+          })
