--- a/views/pages/projects.pug
+++ b/views/pages/projects.pug
@@ -4,8 +4,8 @@ block pageInfo
   -
     let page = {
       websiteURL,
-      url: "/my-projects",
-      name: "my-projects",
+      url: "/projects",
+      name: "projects",
       title: "My projects — A showcase of some of my portfolio of projects I have taken on.",
       description: "A potfolio of projects I have completed, and even some that are still on-going..."
     };
