--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -1,5 +1,6 @@
 mixin footer(value = {})
   - let _class = value.class;
+  - let noSocials = value.noSocials || false;
   footer.footer(data-container)
     .layout-contain-large.layout-padding.style-font-weight-bold.style-font-bold.style-spaceout-small.transition-fade.footer-layout(class=_class)
       div
@@ -20,25 +21,27 @@ mixin footer(value = {})
               class: "layout-margin-left-mini",
             })(itemprop="url" title="The Joseph Ojo sitemap.")
               span(itemprop="name") Sitemap
-          span= " - "
-        +link({
-          href: "https://www.linkedin.com/in/o-josephojo/",
-          class: "layout-margin-left-mini",
-          content: "LinkedIn"
-        })(target="_blank" rel="noreferrer noopener" title="My LinkedIn page.")
-        span= " - "
-        +link({
-          href: "https://github.com/laoluojo",
-          class: "layout-margin-left-mini",
-          content: "Github"
-        })(target="_blank" rel="noreferrer noopener" title="The official Joseph Ojo github link.")
-        span= " - "
-        span(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://josephojo.com")
+          if !noSocials
+            span= " - "
+        if !noSocials
           +link({
-            href: "mailto:laoluojo@gmail.com",
+            href: "https://www.linkedin.com/in/o-josephojo/",
             class: "layout-margin-left-mini",
-            content: "Email"
-          })(target="_blank" rel="noreferrer noopener" itemprop="email" title="An email you can contact me with.")
+            content: "LinkedIn"
+          })(target="_blank" rel="noopener" title="My LinkedIn page.")
+          span= " - "
+          +link({
+            href: "https://github.com/laoluojo",
+            class: "layout-margin-left-mini",
+            content: "Github"
+          })(target="_blank" rel="noopener" title="The official Joseph Ojo github link.")
+          span= " - "
+          span(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://josephojo.com")
+            +link({
+              href: "mailto:laoluojo@gmail.com",
+              class: "layout-margin-left-mini",
+              content: "Email"
+            })(target="_blank" rel="noopener" itemprop="email" title="An email you can contact me with.")
       div
         span
           span Made with
@@ -50,4 +53,4 @@ mixin footer(value = {})
             +link({
               href: "https://github.com/okikio",
               content: "Okiki Ojo"
-            })(target="_blank" rel="noreferrer noopener" title="The github link to the Web Developer who designed this site, Okiki Ojo.")
+            })(target="_blank" rel="noopener" title="The github link to the Web Developer who designed this site, Okiki Ojo.")
