--- a/views/pages/offline.pug
+++ b/views/pages/offline.pug
@@ -11,7 +11,7 @@ block pageInfo
     };
 
 block preload
-  link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
+  //- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 
 block content
   //- Intro layer
@@ -24,7 +24,7 @@ block content
           +head({
             class: "layout-margin-bottom"
           })
-            h1.style-font-45--device-phone.style-primary-dark.style-bold.layout-margin-dull Yikes you're offline!
+            h1.h3.style-font-45--device-phone.style-primary-dark.style-bold.layout-margin-dull Yikes you're offline!
           +main
             +p("Psshhh, psshhh, you are cutting off, psshhh. You are currently offline. Reload the page or try again later.")
 
