change github url

--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -31,7 +31,7 @@ mixin footer(value = {})
           })(target="_blank" rel="noopener" title="My LinkedIn page.")
           span= " - "
           +link({
-            href: "https://github.com/laoluojo",
+            href: "https://github.com/josephojo",
             class: "layout-margin-left-mini",
             content: "Github"
           })(target="_blank" rel="noopener" title="The official Joseph Ojo github link.")
