--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -33,7 +33,7 @@ block content
             })(target="_blank" rel="noopener")
             span= " - "
             +link({
-              href: "https://github.com/laoluojo",
+              href: "https://github.com/josephojo",
               content: "Github"
             })(target="_blank" rel="noopener")
             span= " - "
@@ -74,7 +74,7 @@ block content
               })(target="_blank" rel="noopener")
               span= " - "
               +link({
-                href: "https://github.com/laoluojo",
+                href: "https://github.com/josephojo",
                 content: "Github"
               })(target="_blank" rel="noopener")
               span= " - "
