updated contact me

--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -277,6 +277,37 @@
         }
     }
 
+
+
+    &-joseph-img2 {
+        position: relative;
+        max-width: 300px;
+        height: 450px;
+        // max-height: 450px;
+        width: 500px;
+
+        .layer-image-overlay {
+            background-color: transparent !important;
+        }
+
+        &.layout-left {
+            margin-bottom: $size;
+        }
+        @media #{$screen-size-gt-tablet} {
+            &.layout-left {
+                margin-right: $size;
+            }
+        }
+
+        @media #{$screen-size-lt-tablet} {
+            max-width: 100%;
+            display: block;
+        }
+
+        .placeholder-img {
+            transform: scale(1) !important;
+        }
+    }
     &-secondary-btn {
         transition: background-color #{$transitionDuration} ease;
         @include applyTheme(background-color, "secondary-light");
