--- a/views/pages/projects.pug
+++ b/views/pages/projects.pug
@@ -98,3 +98,25 @@ block content
                   alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
                 }
               })
+
+        //- 3rd Row
+        +row({
+          class: "layout-margin-dull"
+        })
+          //- 3rd Column
+          +column({
+            class: "layout-col-12 layout-padding-small layout-padding-vert-large"
+          })
+            +link({
+              href: "/projects/ultima-apparel",
+              class: "layout-block"
+            }, true)
+              +tile({
+                title: "Ultima Apparel",
+                class: "layer-box layer-surface layout-block layer-tile-outline",
+                image: {
+                  class: "effect-parallax",
+                  src: "cloudinary/Ultima_Team_2",
+                  alt: "An image of me and some friends holding up a prototype of an Ultima Apparel product."
+                }
+              })
