--- a/views/pages/projects/ultima-apparel.pug
+++ b/views/pages/projects/ultima-apparel.pug
@@ -4,21 +4,21 @@ block pageInfo
   -
     let page = {
       websiteURL,
-      url: "/projects/nasa",
-      name: "nasa",
-      title: "Nasa — A project I did with Nasa.",
-      description: "Nasa and I, Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt..."
+      url: "/projects/ultima-apparel",
+      name: "ultima-apparel",
+      title: "Ultima Apparel — Clothes for good health, for the modern person.",
+      description: "Ultima Apparel, a project that I took on with a few friends, to create an amazing line of clothing that ensured better health for the user, by giving them the information they need to make better decisions."
     };
 
 block content
   //- Banner layer
   +banner({
-    title: "Nasa — A project I did with Nasa...",
-    content: "Nasa and I, Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod...",
+    title: "Ultima Apparel",
+    content: "Apparel that ensures good health through modern means.",
     image: {
       class: "effect-parallax hero-img",
-      src: "cloudinary/aerial-photo-of-brown-mountains",
-      alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash."
+      src: "cloudinary/Ultima_Team_2",
+      alt: "An image of me and some friends holding up a prototype of an Ultima Apparel product."
     }
   })
 
@@ -34,7 +34,7 @@ block content
       })
         +p
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
-          span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
+          span.layout-inline.layout-margin-dull project I took on with a few friends, to create an amazing line of clothing that ensured better health for the user, by giving them the information they need to make better decisions.As a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
           span.layout-inline.layout-margin-dull(lorem="1")
           p.layout-inline.layout-margin-dull(lorem="3")
           span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
@@ -47,7 +47,7 @@ block content
 
   //- Next page layer
   +link({
-    href: "/projects/ultima-apparel",
+    href: "/projects/google-designs",
     class: "layout-block"
   }, true)
     +layer({
@@ -63,13 +63,13 @@ block content
         +main({
           class: "layout-padding-vert-sub-large--device-gt-tablet"
         })
-          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Ultima Apparel
+          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Google Designs
 
         +tile({
           class: "layer-box layer-box-flat layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
             class: "effect-parallax",
-            src: "cloudinary/Ultima_Team_2",
-            alt: "An image of me and some friends holding up a prototype of an Ultima Apparel product.",
+            src: "cloudinary/engineer-piping",
+            alt: "An image of large pipes for a Power Plant from Unsplash.",
           }
         })
